# error

./: Cargo.toml
src/: actix_error_conversions.rs  lib.rs
src/enums/: app_error_type.rs  mod.rs
src/models/: app_error.rs
