[package]
name = "error"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.6.0"
backtrace = "0.3.72"
bson = "2.10.0"
mongodb = "2.8.2"
minio = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
redis = "0.32.5"
lapin = "3.2.1"
reqwest = { version = "0.12.23", features = ["json"] }
sqlx = "0.8.6"
serde_json = "1.0.143"
anyhow = "1.0.99"
